# M2MSystem

./: Cargo.toml  dockerfile
.github/workflows/: publish.yml
src/: main.rs  utils.rs
src/body/: Home.rs  mod.rs
src/entities/: application.rs  data_container.rs  home.rs  mod.rs  prelude.rs  sensor.rs  sensor_data.rs  subscribers.rs
src/routes/: Application.rs  DataContainer.rs  Home.rs  Sensor.rs  SensorData.rs  Subscriber.rs
