[package]
name = "M2MSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
xitca-web = { version = "0.7.1", features = [
    "logger",
    "json",
    "codegen",
    "params",
] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "postgres-array",
] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
nanoid = "0.4.0"
