[package]
name = "M2MSystem"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "*"
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-json",
    "with-chrono",
    "postgres-array",
] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
nanoid = "0.4.0"

[dependencies.redis]
version = "*"
features = ["tokio-comp", "ahash", "connection-manager", "aio"]
